fix了一下导出导入，管理员等功能